--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-    <meta charset="UTF-8">
+ <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Time Animator</title>
+   <title>Happy Time Animator</title>
+    <meta name="description" content="Animatori în Moldova din 2022! Oferim spectacole unice, servicii de divertisment pentru copii și adulți.Alegeți profesionalism, creativitate și distracție fără limite.">
+    <meta name="keywords" content="animatori, moldova, chisinau, distractie, copii, animatie.">
+    <meta name="robots" content="index, follow">
+    </head>
     <style>
         /* Estilos generales */
         body {
